WriteConflictRetryAlgorithm's elapsed time calculation is incorrect

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2024-11-11, Execution Team 2024-11-25
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      One of the incremental refactorings in #28070 after the initial perf testing resulted in it not resetting the timer between each attempt, resulting in the elapsed time growing quadratically as time passes. This resulted in far too much backoff, and some tests time out.

            Assignee:
            Thomas Goyne
            Reporter:
            Thomas Goyne
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: