SERVER-96842 Fix the calculation of elapsed time in WriteConflictRetryAlgorithm (#28988)

GitOrigin-RevId: 546b035411b23014e15f2fa0e529608501f6ead5